Avoid question getting hidden behind buttons

--- a/checkin/custom.css
+++ b/checkin/custom.css
@@ -15,6 +15,7 @@ body {
   width: 100%;
   min-height: 50%;
   position: relative;
+  padding: 1rem 1rem 3rem 1rem;
 }
 
 .action-button {
